fix: UILD-27: Story: Known-item searching: Increase spacing between controls

--- a/src/components/ItemSearch/ItemSearch.scss
+++ b/src/components/ItemSearch/ItemSearch.scss
@@ -10,5 +10,10 @@
   .search-controls {
     display: flex;
     flex-direction: row;
+    gap: 1rem;
+
+    input {
+      margin-right: 0.5rem;
+    }
   }
 }
